force-app/main/default/objects/Product2/fields/CostPrice__c.field-meta.xml
<CustomField>
    <fullName>CostPrice__c</fullName>
    <label>Cost Price</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>