force-app/main/default/objects/Product2/fields/Is_Reached_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Is_Reached_Threshold__c</fullName>
    <formula>Quantity__c &lt;= Threshold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Reached Threshold?</label>
    <type>Checkbox</type>
</CustomField>