force-app/main/default/objects/Product2/fields/Profit_Earned__c.field-meta.xml
<CustomField>
    <fullName>Profit_Earned__c</fullName>
    <formula>( Quantity_Sold_At_Retail_Price__c * ( Retail_Price__c - CostPrice__c ))+
( Quantity_Sold_At_Wholesale_Price__c * ( Wholesale_Price__c  -CostPrice__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Profit By Selling This Product</inlineHelpText>
    <label>Profit Earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>