force-app/main/default/objects/Product2/fields/Quantity_Sold_At_Retail_Price__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Sold_At_Retail_Price__c</fullName>
    <label>Quantity Sold At Retail Price</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>