force-app/main/default/objects/Product2/fields/Quantity_To_Reorder__c.field-meta.xml
<CustomField>
    <fullName>Quantity_To_Reorder__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity To Reorder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>