force-app/main/default/objects/Product2/fields/Retail_Profit_Percent__c.field-meta.xml
<CustomField>
    <fullName>Retail_Profit_Percent__c</fullName>
    <defaultValue>0.5</defaultValue>
    <label>Retail Profit Percent</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>