force-app/main/default/objects/Product2/fields/Wholesale_Price__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Price__c</fullName>
    <formula>CostPrice__c + (CostPrice__c *  Wholesale_Profit_Percent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>