force-app/main/default/objects/Product2/fields/Wholesale_Profit_Percent__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Profit_Percent__c</fullName>
    <defaultValue>0.2</defaultValue>
    <label>Wholesale Profit Percent</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>