force-app/main/default/objects/Product2/validationRules/Cost_Price_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Cost_Price_Value</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(CostPrice__c )) &amp;&amp;  CostPrice__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>CostPrice__c</errorDisplayField>
    <errorMessage>Make sure that the number entered is not less than 0 (a negative amount)</errorMessage>
</ValidationRule>