force-app/main/default/objects/Product2/validationRules/Not_Greater_than_Retails_Profit.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Greater_than_Retails_Profit</fullName>
    <active>true</active>
    <errorConditionFormula>Retail_Profit_Percent__c  &lt;  Wholesale_Profit_Percent__c</errorConditionFormula>
    <errorDisplayField>Wholesale_Profit_Percent__c</errorDisplayField>
    <errorMessage>Profit value Enter into the Lessthan RetailSales Profit percentage</errorMessage>
</ValidationRule>