force-app/main/default/objects/Product2/validationRules/Retail_Profit_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Retail_Profit_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Retail_Profit_Percent__c  &lt;= 0</errorConditionFormula>
    <errorMessage>Profit percentage shout be greater than zero</errorMessage>
</ValidationRule>