force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>CostPrice__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Quantity__c</columns>
    <columns>Supplier__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Threshold__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>