force-app/main/default/objects/Product2/listViews/Snacks_And_Beverages.listView-meta.xml
<ListView>
    <fullName>Snacks_And_Beverages</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.PRODUCT_CLASS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Snacks And Beverages</value>
    </filters>
    <label>Snacks And Beverages</label>
</ListView>